fix wrong position of inscription

--- a/src/app/auth/auth.component.scss
+++ b/src/app/auth/auth.component.scss
@@ -88,5 +88,5 @@
 .card__passwords-match-error {
   color: red;
   position: absolute;
-  bottom: 78px;
+  bottom: 130px;
 }
